# spotui

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: app.rs  event.rs  main.rs  spotify_handler.rs  ui.rs  widgets.rs
src/widgets/: current_user.rs  directory.rs  list.rs  nav_list.rs  playlist.rs  top_artists.rs  top_tracks.rs  user_playlist.rs  user_playlists.rs
