[package]
name = "spotui"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.5"
crossterm = {version = "0.28.1", features = ["event-stream"] } 
dotenvy = "0.15.7"
futures = "0.3.31"
log = "0.4.27"
open = "5.3.2"
ratatui = "0.29.0"
reqwest = "0.12.23"
rouille = "3.6.2"
spotify-rs = "0.4.1"
tokio = {version = "1.47.1", features = ["full"]}
tui-logger = {version = "0.17.3", features = ["tracing-support"]}

[dev-dependencies]
insta = "1.43.2"
